--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+body {
+    height:665px;
+    background-image: url("C:\Users\User\Documents\facu\año 3\lab\html\LaboratorioProgramacionG9\imagenes\fondo.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
 
 .tarj_art{
     display: flex;
@@ -5,16 +13,32 @@
     border-radius: 8px;
     padding: 10px;
     align-items: center;
-    width: 200px;
-    height: 120px;
-    background: lightblue;
+    width: 400px;
+    height: 240px;
+
+    justify-content: center;         /* centra horizontalmente el texto */
+    color: white;                    /* color del texto */
+    text-align: center;              /* texto centrado */
+    border-radius: 20px; 
+
+    background: rgb(84, 85, 88);
 }
+
+.tarj_art img{
+    max-width: 80%;
+    max-height: 80%;
+    margin: 5px;
+    height: auto;
+    object-fit: contain;
+}
+
 #buscador{
     display:flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 40px;
 }
+
 #zona_tarj{
     display:flex;
     flex-wrap: wrap;
