--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     height:665px;
-    background-image: url("C:\Users\User\Documents\facu\año 3\lab\html\LaboratorioProgramacionG9\imagenes\fondo.png");
+    background-image: url("imagenes/fondo.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
