--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,64 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    margin: 0;
+    padding: 0;
 }
 
+/*BUSCADOR INPUT DE TEXTO PARA LA BUSQUEDA*/
+#buscador{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+}
+#ingrese{
+  font-size: 40px;
+  font-weight: bold;
+  color:black;
+  text-align: center;
+  margin-bottom: 15px;
+  font-family: 'Raleway', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: 1px;
+  background: rgba(0, 51, 102, 0.8);
+  padding: 10px 20px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
+#busqueda{
+  width:500px;
+  height:45px;
+  border-radius: 12px;
+  background-color: black;
+  color: white;
+  border-color: #004c99;
+  padding: 0 15px;
+  font-size: 16px;font-family: 'Raleway', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  letter-spacing: 1px;
+  outline: none; 
+  transition: 0.3s ease; 
+}
+#busqueda:hover {
+    border-color: #14c0df;
+}
+#busqueda:focus {
+    border-color: #1db954;  /* verde tipo spotify?? porq sino todo en muy azul*/
+    box-shadow: 0 0 8px #1db954;
+}
+
+/*TARJETAS DE ARTISTAS RESULTADOS DE LA BUSQUEDA*/
+#zona_tarj{
+    display:flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
 .tarj_art{
     display: flex;
     flex-direction: row;
@@ -15,15 +71,12 @@
     align-items: center;
     width: 400px;
     height: 240px;
-
     justify-content: center;         /* centra horizontalmente el texto */
     color: white;                    /* color del texto */
     text-align: center;              /* texto centrado */
     border-radius: 20px; 
-
-    background: rgba(84, 85, 88, 0.7);
+    background: rgba(0, 0, 0, 0.7);
 }
-
 .tarj_art img{
     max-width: 80%;
     max-height: 80%;
@@ -32,50 +85,37 @@
     object-fit: contain;
 }
 
-#buscador{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 40px;
-}
 
-#zona_tarj{
-    display:flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
+/*BARRA DE NAVEGACION*/
+#header_index{
+  display: flex;
+  justify-content: center;
 }
-
 .topnav {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
+    background-color: rgba(0, 51, 102, 0.8);
+    width: 100%;
+    height: 60px;
+    position: relative;
   }
 
 .topnav_icon {
-  float: left;
-  display: block;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family:monospace;
   font-size: 17px;
+  transition: background-color 0.3 ease;
+  margin-right: 30px;
 }
-
-
-/* cuando pasamos sobre la caja de algun topnav_icon */
-.topnav_icon:hover {
-  background-color: #ddd; /* El fondo pasa a ser blanco*/
-  color: black; /* letra pasa a ser negra */
+.topnav_icon:hover {/* cuando pasamos sobre la caja de algun topnav_icon */
+  background-color: #004c99; 
+  color: #fff; 
 }
-
-/* En la pagina que estemos, se va a ver de otro color */
-.topnav_icon.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav_icon.icon {
-  display: none;
+.topnav_icon.active {/* En la pagina que estemos, se va a ver de otro color */
+  background-color: white;
+  color: black;
 }
