--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 #ingrese{
   font-size: 40px;
   font-weight: bold;
-  color:black;
+  color:white;
   text-align: center;
   margin-bottom: 15px;
   font-family: 'Raleway', sans-serif;
@@ -27,7 +27,7 @@
   font-weight: 700;
   font-style: normal;
   letter-spacing: 1px;
-  background: rgba(0, 51, 102, 0.8);
+  background: rgba(1, 154, 224, 0.6);
   padding: 10px 20px;
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
@@ -40,7 +40,8 @@
   color: white;
   border-color: #004c99;
   padding: 0 15px;
-  font-size: 16px;font-family: 'Raleway', sans-serif;
+  font-size: 16px;
+  font-family: 'Raleway', sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
@@ -56,34 +57,57 @@
     box-shadow: 0 0 8px #1db954;
 }
 
-/*TARJETAS DE ARTISTAS RESULTADOS DE LA BUSQUEDA*/
-#zona_tarj{
-    display:flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-}
-.tarj_art{
-    display: flex;
-    flex-direction: row;
+  /*TARJETAS DE ARTISTAS RESULTADOS DE LA BUSQUEDA*/
+  #zona_tarj{
+      display:flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      justify-content: center;
+  }
+  .tarj_art{
+      display: flex;
+      flex-direction: row;
+      border-radius: 8px;
+      padding: 10px;
+      align-items: center;
+      width: 400px;
+      height: 240px;
+      justify-content: flex-start;       
+      color: white;       
+      border-radius: 20px; 
+      background: rgba(1, 154, 224, 0.6);
+      position:relative;
+  }
+  .tarj_art:hover{
+    background: rgba(6, 195, 252, 0.822);
+    box-shadow: #14c0df;
+  }
+  .tarj_art img{
+      width: 80%;
+      height: 80%;
+      max-width: 80%;   
+      max-height: 80%;
+      margin: 5px;
+      height: auto;
+      object-fit: cover;
+      z-index: 0;
+      position: absolute;
+  }
+
+  .tarj_art p{
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    letter-spacing: 1px;
+    z-index: 1;
+    background: rgba(1, 35, 51, 0.6);
     border-radius: 8px;
-    padding: 10px;
-    align-items: center;
-    width: 400px;
-    height: 240px;
-    justify-content: center;         /* centra horizontalmente el texto */
-    color: white;                    /* color del texto */
-    text-align: center;              /* texto centrado */
-    border-radius: 20px; 
-    background: rgba(0, 0, 0, 0.7);
-}
-.tarj_art img{
-    max-width: 80%;
-    max-height: 80%;
-    margin: 5px;
-    height: auto;
-    object-fit: contain;
-}
+    padding: 8px 12px;
+    position: relative;
+    
+  }
 
 
 /*BARRA DE NAVEGACION*/
@@ -95,7 +119,7 @@
     display: flex;
     justify-content: right;
     align-items: center;
-    background-color: rgba(0, 51, 102, 0.8);
+    background: rgba(1, 154, 224, 0.6);
     width: 100%;
     height: 60px;
     position: relative;
