--- a/styles.css
+++ b/styles.css
@@ -66,13 +66,12 @@
   }
   .tarj_art{
       display: flex;
-      flex-direction: row;
       border-radius: 8px;
       padding: 10px;
       align-items: center;
       width: 400px;
       height: 240px;
-      justify-content: flex-start;       
+      justify-content: center;       
       color: white;       
       border-radius: 20px; 
       background: rgba(1, 154, 224, 0.6);
@@ -97,7 +96,6 @@
   .tarj_art p{
     font-size: 20px;
     font-family: 'Raleway', sans-serif;
-    font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
     letter-spacing: 1px;
@@ -105,8 +103,7 @@
     background: rgba(1, 35, 51, 0.6);
     border-radius: 8px;
     padding: 8px 12px;
-    position: relative;
-    
+    margin-right:60%;
   }
 
 
