--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@
       display:flex;
       flex-direction: row;
       gap: 20px;
-      justify-content: right;
+      justify-content: center;
       align-items: baseline;
   }
   .tarj_art{
