--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,7 @@
       max-width: 80%;   
       max-height: 80%;
       margin: 5px;
+      margin-left: 7%;
       height: auto;
       object-fit: cover;
       z-index: 0;
@@ -115,6 +116,11 @@
   .link_artista{
     text-decoration: none; /* Quita el subrayado del link */
   }
+
+/*BOTONES DE PAGINACION*/
+
+
+
 
 
 /*BARRA DE NAVEGACION*/
@@ -164,12 +170,3 @@
   height: 5%;
 }
 
-
-/* #logo {
-  background-size: contain;
-  background-repeat: no-repeat;
-  border: black;
-  height: 20%;
-  width: 20%;
-  padding: 0%;
-} */
