--- a/styles-artista.css
+++ b/styles-artista.css
@@ -2,22 +2,20 @@
 #zona_gen{
     display: flex;
     flex-direction: column;
-    justify-content: center;    
+    justify-content: flex-start;    
     align-items: center;
 }
 
 .tarj_gen{
   display: flex;
   flex-direction: column;
+  align-items: center;
   border-radius: 8px;
-  padding: 10px;
-  align-items:start;
-  width: 80%;
-  height: 20%;
-  justify-content: left;       
-  color: white;       
-  border-radius: 20px; 
+  padding: 20px;
+  width: 95%;
+  color: white;
   background: rgba(39, 82, 104, 0.6);
+  margin: 15px 0;
 }
 
 .separar{
