--- a/styles-artista.css
+++ b/styles-artista.css
@@ -10,14 +10,28 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 150px;
   padding: 20px;
-  width: 95%;
+  width: 80%;
   color: white;
   background: rgba(39, 82, 104, 0.6);
   margin: 15px 0;
+  padding-bottom: 40px;
 }
-
+.zona_tarj{
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+}
+.tarj_gen h2{
+  font-size: 33px;
+  font-family: 'Raleway', sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+  letter-spacing: 1px;
+  z-index: 1;
+}
 .separar{
   margin: 10px 0 10px 0;
 }
