--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 #body_index {
     height:665px;
-    background-image: url("imagenes/fondo.png");
+    background-image: url("../imagenes/fondo.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
