--- a/public/css/styles-artista.css
+++ b/public/css/styles-artista.css
@@ -36,3 +36,22 @@
   margin: 10px 0 10px 0;
 }
 
+.titulo_artista{
+    font-size: 40px;
+    font-family: 'Raleway', sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    letter-spacing: 1px;
+    color: white;
+    text-align: center;
+}
+
+.imagen_artista{
+    display: flex;
+    align-items: center;
+    margin: 20px auto;
+    max-width: 300px;
+    border-radius: 20px;
+}
+
